--- a/package.json
+++ b/package.json
@@ -15,22 +15,26 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "chart": "^0.1.2",
     "chart.js": "^4.4.2",
+    "date-fns": "^3.6.0",
+    "lodash.debounce": "^4.0.8",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
-    "primereact": "^10.5.1",
+    "primereact": "^10.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-icons": "^5.2.1",
     "react-pro-sidebar": "^1.1.0",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.3",
-    "styled-components": "^6.1.8"
+    "react-router-dom": "^6.24.0",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
