--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "primeicons": "^6.0.1",
     "primereact": "^10.7.0",
     "react": "^18.2.0",
+    "react-canvas-draw": "^1.2.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.2.1",
