--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@hello-pangea/dnd": "^16.6.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
+    "@react-google-maps/api": "^2.20.3",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "chart": "^0.1.2",
     "chart.js": "^4.4.2",
     "date-fns": "^3.6.0",
+    "konva": "^9.3.15",
     "lodash.debounce": "^4.0.8",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
@@ -33,10 +35,12 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.2.1",
+    "react-konva": "^18.2.10",
     "react-pro-sidebar": "^1.1.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.24.0",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "use-image": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
